# auditcopilot

./: .gitattributes  .replit  README.md  pyproject.toml  replit.md
artifacts/audit-copilot/: ai_memo.py  data_generator.py  excel_export.py  main.py  requirements.txt  rules.py
artifacts/audit-copilot/.replit-artifact/: artifact.edit.toml
artifacts/audit-copilot/.streamlit/: config.toml
attached_assets/: Pasted-REPLIT-AGENT-BRIEF-AuditCopilot-1-APP-OVERVIEW-App-name_1778257973605.txt
